# JPEGCompression

./: .gitignore  CMakeLists.txt  main.cpp
Documentatie/: IMAGE PROCESSING PROJECT PROPOSAL.docx
data/: output.txt
inc/: ImageBlock.h  ImageBlockMatrix.h  ZigZagVectors.h  dct.h  huffman.h  quantization.h  rgbToYCC.h  subsampling.h  yccSubsampled.h
src/: ImageBlock.cpp  ImageBlockMatrix.cpp  ZigZagVectors.cpp  dct.cpp  huffman.cpp  quantization.cpp  rgbToYCC.cpp  subsampling.cpp  yccSubsampled.cpp
test/: dct.py  inputs.h  outputs.h  testChannelConversion.cpp  testDCT.cpp  testEncoding.cpp  testHelpers.cpp  testImageBlocks.cpp
